samples/_failures_safe/1761630279_5da0af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c4c4a99.c: In function ‘tokenize_next’:
./samples/SAFE/__tmp_8c4c4a99.c:167:5: error: expected identifier at end of input
  167 |     token->
      |     ^~~~~
./samples/SAFE/__tmp_8c4c4a99.c:167:5: error: expected declaration or statement at end of input
